# living-ice-temperature

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml
app/: .gitignore  index.html  package.json  vite.config.ts
app/public/: boreholes.json
app/public/BindschadlerIceStream/: BIS9845_temp.csv
app/public/Byrd/: byrd_temp.csv
app/public/CraryIceRise/: CIRD_temp.csv
app/public/DomeC/: domec_grainsize.csv  domec_temp.csv
app/public/EngelhardtIceRidge/: ER9612_temp.csv
app/public/KambIceStream/: KIS0012_temp.csv  KIS962_temp.csv
app/public/SipleDome/: sipledome_grainsize.csv
app/public/TaylorDome/: taylordome_imp.csv  (+1 more)
app/src/: AboutDialog.tsx  AntarcticMap.tsx  App.tsx  Borehole.ts  BoreholeDialog.tsx  DepthChart.tsx  Sidebar.tsx  main.tsx  proj4leaflet.d.ts
processing/: pyproject.toml
processing/data/: BoreholeLocations.csv
processing/data/DomeC/: domec_imp.csv
processing/data/DomeF/: domef_temp.csv
processing/data/KambIceStream/: KIS006_temp.csv  KIS009_temp.csv
processing/data/Kohnen/: kohnen_temp.csv
processing/data/LawDome/: lawdome_temp.csv
processing/data/SipleDome/: simpledome_imp.csv  simpledome_temp.csv
processing/data/Unicorn/: UC9311_temp.csv  UC9314_temp.csv  UC9316_temp.csv
processing/data/Vostok/: vostok_imp.csv  vostok_temp.csv
processing/data/WAISDivide/: waisdivide_temp.csv
processing/data/WhilliansIceStream/: WIS911_temp.csv  WIS9226_temp.csv
processing/scripts/: update-app-data
processing/src/living_ice_temperature/: main.py  models.py
processing/tests/: conftest.py  test_models.py
(+5 files in other folders)
