[project]
name = "living-ice-temperature"
version = "0.1.0"
description = "Data processing for Living Ice Temperature"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8",
    "geojson-pydantic>=2.1.0",
    "pydantic>=2.12.5",
]

[project.scripts]
living-ice-temperature = "living_ice_temperature.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
